<resources>
    <string name="app_name">QuizApp</string>
    <string name="desc_app">Ini adalah aplikasi quiz sederhana, yang digunakan untuk melihat kemampuan peserta didik ataupun dapat digunakan untuk test masuk perusahaan</string>
    <string name="play">Play</string>
    <string name="start">Start</string>
    <string name="enter_a_nickname">Enter a Nickname</string>
    <string name="please_field_your_nickname">Please field your nickname</string>
    <string name="default_index">- / -</string>
    <string name="default_text">-</string>
    <string name="your_score">Your Score</string>
    <string name="done">Done</string>
    <string name="are_you_sure">Are you sure?</string>
    <string name="message_exit">If you click yes, your data will be destroy</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="message_input_data">You will input this data</string>
    <string name="text_done">Done</string>
    <string name="are_you_suree">Are you sure?</string>
    <string name="mesaage_exit">If you click yes, your data will be destroy</string>
    <string name="ya">Yes</string>
    <string name="tidak">No</string>
    <string name="retype_your_password">Retype Your Password</string>
    <string name="sign_up">Sign Up</string>
    <string name="already_registered_sign_in">Already Registered , Sign In !</string>
    <string name="type_your_password">Type Your Password</string>
    <string name="enter_your_email">Enter your Email</string>
    <string name="type_your_email">Type your Email</string>
    <string name="not_registered_yet_sign_up">Not Registered Yet , Sign Up !</string>
    <string name="sign_in">Sign In</string>
    <string name="password">Password</string>
    <string name="username">Username</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="already_an_user_login">Already an User? Login.</string>
    <string name="not_yet_registered_sign_up">Not yet registered? Sign Up.</string>
</resources>