<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/img"
    android:gravity="center"
    android:orientation="vertical"
    tools:context=".ui.login.SignInActivity">

    <ImageView
        android:layout_width="240dp"
        android:layout_height="wrap_content"
        android:src="@drawable/img_2" />

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="30dp"
        app:cardCornerRadius="30dp"
        app:cardElevation="20dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:orientation="vertical"
            android:padding="24dp">

            <TextView
                android:id="@+id/tv_sign_in"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="Sign Up"
                android:textAlignment="center"
                android:textColor="@color/colorPrimary"
                android:textSize="30sp"
                android:textStyle="bold" />

            <EditText
                android:id="@+id/emailEt"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_marginTop="40dp"
                android:background="@drawable/custom_edittext"
                android:drawableLeft="@drawable/baseline_person_24"
                android:drawablePadding="8dp"
                android:hint="@string/type_your_email"
                android:inputType="textEmailAddress"
                android:padding="10dp"
                android:textColor="@color/black" />

            <EditText
                android:id="@+id/passET"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_marginTop="20dp"
                android:background="@drawable/custom_edittext"
                android:drawableLeft="@drawable/baseline_lock_outline_24"
                android:drawablePadding="8dp"
                android:hint="@string/type_your_password"
                android:inputType="textPassword"
                android:padding="8dp"
                android:textColor="@color/black"
                app:passwordToggleEnabled="true" />

            <EditText
                android:id="@+id/confirmPassEt"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_marginTop="20dp"
                android:background="@drawable/custom_edittext"
                android:drawableLeft="@drawable/baseline_lock_outline_24"
                android:drawablePadding="8dp"
                android:hint="@string/confirm_password"
                android:inputType="textPassword"
                android:padding="8dp"
                android:textColor="@color/black"
                app:passwordToggleEnabled="true" />

            <Button
                android:id="@+id/login_button"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_marginTop="30dp"
                android:background="@drawable/bg_btn_primary"
                android:text="@string/sign_up"
                android:textColor="@color/white"
                android:textSize="18sp"
                app:cornerRadius="20dp" />

            <TextView
                android:id="@+id/signupRedirectText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="10dp"
                android:padding="8dp"
                android:text="@string/already_an_user_login"
                android:textColor="@color/colorPrimary"
                android:textSize="18sp" />

        </LinearLayout>

    </androidx.cardview.widget.CardView>

</LinearLayout>