<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.score.ScoreActivity">

    <ImageView
        android:id="@+id/iv_bg_result"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:adjustViewBounds="true"
        android:src="@drawable/img_1"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/iv_test_result"
        android:layout_width="180dp"
        android:layout_height="160dp"
        android:src="@drawable/img_3"
        app:layout_constraintBottom_toBottomOf="@id/iv_bg_result"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/iv_bg_result" />

    <TextView
        android:id="@+id/tv_nickname"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/default_text"
        tools:text="Nickname"
        android:textColor="@color/white"
        android:textSize="36dp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="@id/iv_bg_result"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/your_score"
        android:textColor="@color/black"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="@id/iv_test_result"
        app:layout_constraintEnd_toEndOf="@id/iv_test_result"
        app:layout_constraintStart_toStartOf="@id/iv_test_result" />

    <TextView
        android:id="@+id/tv_score"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:background="@drawable/bg_score"
        android:fontFamily="sans-serif-medium"
        android:minWidth="160dp"
        android:paddingHorizontal="16dp"
        android:paddingVertical="8dp"
        android:text="@string/default_text"
        android:textAlignment="center"
        android:textColor="@color/white"
        android:textSize="40sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/iv_test_result"
        tools:text="100" />

    <Button
        android:id="@+id/btn_done"
        android:layout_width="wrap_content"
        android:layout_height="40dp"
        android:text="@string/text_done"
        android:textColor="@color/white"
        android:background="@drawable/bg_btn_primary"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:drawableEnd="@drawable/baseline_keyboard_arrow_right_24"
        android:layout_margin="20dp"
        android:paddingHorizontal="20dp"/>


</androidx.constraintlayout.widget.ConstraintLayout>